--- a/requirements/requirements.in
+++ b/requirements/requirements.in
@@ -1,5 +1,6 @@
 #-c constraints.in # <-- contains known limitations
 
 staticjinja >= 5.0.0  # generates html from templates
+jinja2 >= 3.1.4  # CVE-2024-34064 not picked up by staticjinja2 yet. Can remove once that happens.
 pyyaml  # loads page data from yaml files
 libsass  # compiles sass files to css
